[gd_scene load_steps=4 format=3 uid="uid://ctmg35wpld28d"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_rxn43"]
[ext_resource type="Texture2D" uid="uid://cdi47qxpig3qo" path="res://art/PongBackground.png" id="2_quvyn"]
[ext_resource type="PackedScene" uid="uid://cclhajiw61ag5" path="res://scenes/Menue/options.tscn" id="3_6dhxo"]

[node name="Main" type="CanvasLayer"]
script = ExtResource("1_rxn43")

[node name="Node" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PongBackground" type="TextureRect" parent="Node"]
modulate = Color(0.393086, 0.393086, 0.393085, 1)
self_modulate = Color(0.716296, 0.716296, 0.716296, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_quvyn")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -247.0
offset_top = -122.0
offset_right = 251.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ExitButton")
theme_override_font_sizes/font_size = 36
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Options"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
focus_neighbor_bottom = NodePath("../StartButton")
theme_override_font_sizes/font_size = 36
text = "Exit"

[node name="Options" parent="." instance=ExtResource("3_6dhxo")]
visible = false

[node name="MarginContainer" parent="Options" index="0"]
offset_right = 18.0
offset_bottom = 12.0

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Options/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_options_exit_option_menu"]

[editable path="Options"]
[editable path="Options/MarginContainer/VBoxContainer/Settings"]
